Kubernetes/helpers/destinationrule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: ruuter-destinationrule
spec:
  host: component-byk-ruuter
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
