Kubernetes/helpers/istio-setup-byk-dmapper.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: component-byk-dmapper
spec:
  host: component-byk-dmapper
  subsets:
  - name: component-byk-dmapper
    labels:
      app: component-byk-dmapper
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: component-byk-dmapper
spec:
  hosts:
  - component-byk-dmapper
  http:
  - name: allow
    match:
    - sourceLabels:
        app: component-byk-ruuter
    - sourceLabels:
        app: component-byk-ruuter-private
    route:
    - destination:
        host: component-byk-dmapper
        subset: component-byk-dmapper
  - name: reject
    route:
    - destination:
        host: component-byk-dmapper
        subset: component-byk-dmapper
    fault:
      abort:
        percentage:
          value: 100.0
        httpStatus: 403
