Kubernetes/helpers/istio-setup-byk-ruuter.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: component-byk-ruuter
spec:
  host: component-byk-ruuter
  subsets:
  - name: component-byk-ruuter
    labels:
      app: component-byk-ruuter
#  host: "*.local"
#  trafficPolicy: # Add this section to enable mTLS
#    tls:
#      mode: ISTIO_MUTUAL # Enable mTLS
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: component-byk-ruuter
spec:
  hosts:
  - component-byk-ruuter
  http:
  - route:
    - destination:
        host: component-byk-ruuter
