Kubernetes/helpers/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ruuter-virtualservice
spec:
  hosts:
    - component-byk-ruuter
  http:
    - route:
        - destination:
            host: component-byk-ruuter
            subset: v1
